[package]
name = "nu-dock"
version = "0.1.0"
edition = "2018"

[dependencies]
nu-plugin = "0.34"
nu-protocol = "0.34"
nu-source = "0.34"
nu-errors = "0.34"
serde-nu = "~0"
serde = "1"
anyhow = "1"
bollard = "0.11"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[[bin]]
name = "nu_plugin_dock"
path = "bin/dock.rs"

[[bin]]
name = "nu_plugin_dock_containers"
path = "bin/containers.rs"

[[bin]]
name = "nu_plugin_dock_images"
path = "bin/images.rs"
